# node_resolver

./: Cargo.toml
.github/workflows/: ci.yml
src/: errors.rs  exports_resolve.rs  lib.rs  package_json.rs  parse_specifier.rs
src/testdata/cjs_exports_conditional/: main.js  package.json
src/testdata/cjs_exports_multi/: main.js
src/testdata/cjs_exports_string/: main.js  package.json
src/testdata/cjs_imports_exports/: main.js  package.json
src/testdata/cjs_main/: main.js  sibling.js
src/testdata/cjs_scoped/: main.js  package.json
