[package]
name = "node_resolve"
version = "0.1.0"
authors = ["The Deno Authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/node_resolve"
description = "The Node.js module resolution algorithm"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
