[package]
name = "node_resolver"
version = "0.1.0"
authors = ["The Deno Authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/node_resolver"
description = "The Node.js module resolution algorithm"

[dependencies]
anyhow = "1"
path-clean = "0.1.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"